# duciuyoona

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  PLANNING.md  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/starter_kits/: demo_baseline.ipynb  demo_total_forecast.ipynb
src/duciuyoona/: __init__.py  cli.py
src/duciuyoona/features_engineering/sales_features/: _window_average.py
src/duciuyoona/forecast_models/: _local_YAFSU_models.py  _local_classical_models.py
tests/: __init__.py  test_duciuyoona.py
