[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "duciuyoona"
version = "0.1.0"
description = "This is the demo package for training OOP for Data Scientist"
readme = "README.rst"
authors = [
  {name = "Henry Duc Lai", email = "ducltm@outlook.com"}
]
maintainers = [
  {name = "Henry Duc Lai", email = "ducltm@outlook.com"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/laitrungminhduc/duciuyoona/issues"
changelog = "https://github.com/laitrungminhduc/duciuyoona/blob/master/changelog.md"
homepage = "https://github.com/laitrungminhduc/duciuyoona"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

